# NovaFramework

./: docker-compose.yml  main.py  pyproject.toml
src/nova_api/config/: settings.py  urls.py
src/nova_api/graphql_api/: urls.py
src/nova_framework/nova_api/config/: settings.py  urls.py
src/nova_framework/nova_api/grpc_api/: apps.py  urls.py
src/nova_framework/nova_api/websocket_api/: apps.py  urls.py
src/nova_framework/nova_tests/: run_tests.py
src/nova_ui/: package-lock.json  package.json
