[project]
name = "novaframework"
version = "0.0.dev0"
description = "novaframemork_is_prototype"
readme = "README.md"
license = "MIT"
authors = [
    { name = "djangooblack", email = "qhalil6060@gmail.com" }
]
requires-python = ">=3.13.5"
dependencies = [
    "asyncio>=4.0.0",
    "ecdsa>=0.19.1",
    "wasmtime>=36.0.0",
    "web3>=7.13.0",
]

[dependency-groups]
api = [
    "django>=5.2.5",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-graphql-jwt>=0.4.0",
    "djangogrpcframework>=0.2.1",
    "djangorestframework>=3.16.1",
    "djangorestframework-api-key==3.*",
    "graphene-django>=3.2.3",
    "grpcio>=1.74.0",
    "gunicorn>=23.0.0",
]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "grpcio-tools>=1.74.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pyinstrument>=5.1.1",
    "pytest>=8.4.1",
]

[project.scripts]

[tool.uv.build-backend]
module-root = "src"
module-name = []
namespace = true

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
